2009-10-21  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance error message in solver-factory.hxx.
	* include/roboptim/core/solver-factory.hxx:
	Enhance error message.

2009-10-21  Thomas Moulard  <thomas.moulard@gmail.com>

	Make plug-in loading more robust.
	* include/roboptim/core/solver-factory.hxx: Check problem size
	when loading a plug-in.
	* src/roboptim-core-dummy-plugin.cc: Add getSizeOfProblem function.

2009-10-21  Thomas Moulard  <thomas.moulard@gmail.com>

	Reorganize configure.ac.
	* configure.ac: Change macro order to enhance consistency.

2009-10-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.
	* doc/Doxyfile.extra.in: Rename from doc/Doxyfile.extra.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* Makefile.am: Include ``build-aux/git-version-gen.mk''.
	* build-aux: Synchronize.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance bad gradient class.
	* include/roboptim/core/finite-difference-gradient.hh,
	* src/finite-difference-gradient.cc: Store and display
	in which component is the greated delta between
	finite difference and analytical gradients.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.
	* tests/atlocal.in: Pass version to test suite
	as required by autotest.at.

2009-10-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Update NEWS file.
	* NEWS: Here.
