@@ -45,21 +45,21 @@ extern "C"
   using namespace roboptim;
   typedef DummySolver::parent_t solver_t;
 
-  unsigned getSizeOfProblem ();
-  solver_t* create (const DummySolver::problem_t& pb);
-  void destroy (solver_t* p);
+  ROBOPTIM_DLLEXPORT unsigned getSizeOfProblem ();
+  ROBOPTIM_DLLEXPORT solver_t* create (const DummySolver::problem_t& pb);
+  ROBOPTIM_DLLEXPORT void destroy (solver_t* p);
 
-  unsigned getSizeOfProblem ()
+  ROBOPTIM_DLLEXPORT unsigned getSizeOfProblem ()
   {
     return sizeof (solver_t::problem_t);
   }
 
-  solver_t* create (const DummySolver::problem_t& pb)
+  ROBOPTIM_DLLEXPORT solver_t* create (const DummySolver::problem_t& pb)
   {
     return new DummySolver (pb);
   }
 
-  void destroy (solver_t* p)
+  ROBOPTIM_DLLEXPORT void destroy (solver_t* p)
   {
     delete p;
   }
