@@ -1,3 +1,10 @@
+2009-10-23  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Add missing ROBOPTIM_DLLEXPORT.
+	* include/roboptim/core/visualization/gnuplot-commands.hh,
+	* include/roboptim/core/visualization/gnuplot.hh,
+	* src/roboptim-core-dummy-plugin.cc: Export all symbols properly.
+
 2009-10-21  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Enhance error message in solver-factory.hxx.
